# cmake

./: CMakeLists.txt  Makefile  README.md
cmake/: AddGitSubmodule.cmake  Docs.cmake
docs/html/: _c_make_lists_8txt.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib2_8cc.html  my__lib_2_c_make_lists_8txt.html  my__lib_8cc.html  my__lib_8h.html  my__lib_8h_source.html
docs/html/search/: all_2.js
src/my_lib/: CMakeLists.txt
